# ata-beamforming

./: README.md  meson.build  pyproject.toml
benchmarks/bundles/: benchmark.cc
benchmarks/bundles/ata/mode-b/: generic.hh  mode_b.hh
benchmarks/bundles/ata/mode-bh/: generic.hh  mode_bh.hh
benchmarks/bundles/generic/mode-h/: generic.hh  mode_h.hh
benchmarks/bundles/generic/mode-x/: generic.hh  mode_x.hh
benchmarks/modules/: benchmark.cc
benchmarks/modules/caster/: base.hh  generic.hh
benchmarks/modules/channelizer/: base.hh  generic.hh
benchmarks/modules/correlator/: base.hh  generic.hh
benchmarks/modules/detector/: base.hh
benchmarks/modules/duplicator/: base.hh  generic.hh
benchmarks/modules/gather/: base.hh  generic.hh
benchmarks/modules/gatherer/: base.hh  generic.hh
benchmarks/modules/integrate/: base.hh  generic.hh
benchmarks/modules/integrator/: base.hh  generic.hh
benchmarks/modules/permutator/: base.hh  generic.hh
benchmarks/modules/stacker/: base.hh  generic.hh
docs/: index.rst
examples/: README.md
examples/pipeline-cpp/: meson.build  pipeline.cc
examples/pipeline-python/: pipeline_async.py
include/blade/: config.hh.in  logger.hh  pipeline.hh  runner.hh
include/blade/bundles/ata/: mode_b.hh
include/blade/bundles/generic/: base.hh  mode_h.hh  mode_x.hh
include/blade/memory/: types.hh
include/blade/memory/device/: ops.hh
include/blade/modules/: base.hh  caster.hh  correlator.hh  detector.hh  duplicator.hh  gather.hh  gatherer.hh  integrate.hh  integrator.hh  permutator.hh  polarizer.hh  stacker.hh
include/blade/utils/fmt/: args.h  base.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
python/: meson.build
python/blade/: ext_caster.cc  ext_correlator.cc  ext_detector.cc  ext_duplicator.cc  ext_gather.cc  ext_gatherer.cc  ext_integrate.cc  ext_integrator.cc  ext_modeb.cc  ext_modeh.cc  ext_modex.cc  ext_permutator.cc  ext_runner.cc  ext_stacker.cc  meson.build
python/blade/_internal/: __init__.py
python/blade/_runner/: __init__.py
src/: pipeline.cc  runner.cc
src/bundles/ata/: meson.build
src/bundles/generic/: meson.build
src/modules/: meson.build
src/modules/caster/: base.cc  caster.cu  meson.build
src/modules/correlator/: base.cc  correlator.cu  meson.build
src/modules/detector/: base.cc
src/modules/duplicator/: base.cc  meson.build
src/modules/gather/: base.cc
src/modules/gatherer/: base.cc  gatherer.cu  meson.build
src/modules/integrate/: base.cc  integrate.cu  meson.build
src/modules/integrator/: base.cc  integrator.cu  meson.build
src/modules/permutator/: base.cc  meson.build  permutator.cu
src/modules/polarizer/: base.cc  polarizer.cu
src/modules/stacker/: base.cc  meson.build  stacker.cu
tests/bundles/ata/: mode_b.py  mode_bh.py
tests/bundles/generic/: meson.build  mode_h.py  mode_x.py
tests/modules/: meson.build
tests/modules/caster/: caster.py  meson.build
tests/modules/correlator/: high_resolution.py  high_resolution_integrate.py  meson.build  standard_resolution.py
tests/modules/detector/: cross_pol.py  single_pol.py
tests/modules/duplicator/: duplicator.py  meson.build
tests/modules/gather/: gather.py
tests/modules/gatherer/: gatherer.py  meson.build
tests/modules/integrate/: integrate.py  meson.build
tests/modules/integrator/: integrator.py  meson.build
tests/modules/permutator/: meson.build  permutator.py
tests/modules/stacker/: meson.build  stacker.py
tools/: patch_fmtlib.sh
