sum_lst = {}

subdir('caster')
subdir('phasor')
subdir('detector')
subdir('correlator')
subdir('beamformer')
subdir('channelizer')
subdir('polarizer')
subdir('stacker')
subdir('permutator')
subdir('duplicator')
subdir('guppi')
subdir('integrator')
subdir('bfr5')

summary(sum_lst, section: 'Modules', bool_yn: true)
